@@ -77,3 +77,5 @@ CancelStatementThread.cancelSucceeded=The database has been asked to cancel the 
 SQLResultExecuterPanel.canceleRequested=Query execution cancel requested by user.
 
 MessagePanel.clearLabel=Clear
+
+ObjectTreeSearch.error.objectnotfound=Could not locate the database object '{0}' in Object tree
